hack/dev/kind/forgejo/forgejo-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gosmee
  namespace: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gosmee
  template:
    metadata:
      labels:
        app: gosmee
    spec:
      containers:
        - image: ghcr.io/chmouel/gosmee:main
          imagePullPolicy: IfNotPresent
          name: gosmee
          args:
            [
              "client",
              "--saveDir",
              "/tmp/save",
              "VAR_FORGEJO_SMEE_HOOK_URL",
              "VAR_URL",
            ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: forgejo-configmap
          configMap:
            name: forgejo-config
            items:
              - key: app.ini
                path: app.ini
        - name: forgejo-data
          emptyDir: {}
      containers:
        - image: codeberg.org/forgejo/forgejo:13
          imagePullPolicy: IfNotPresent
          name: forgejo
          command:
            [
              "sh",
              "-c",
              "mkdir -p /data/gitea/conf && cp -f /configmap/app.ini /data/gitea/conf/app.ini && /usr/local/bin/gitea web -c /data/gitea/conf/app.ini",
            ]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: forgejo-configmap
              mountPath: /configmap
            - name: forgejo-data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  namespace: forgejo
  name: forgejo
spec:
  type: NodePort
  selector:
    app: forgejo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32567
      name: http-listener
